--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@bambora/checkout-sdk-web": "^3.0.7",
     "bootstrap": "^5.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
