--- a/package.json
+++ b/package.json
@@ -6,30 +6,41 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "compile:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:ssr": "node dist/frontEnd/server/main.js",
+    "build:ssr": "ng build && ng run frontEnd:server",
+    "build:client-and-server-bundles": "ng build --prod && ng run frontEnd:server:production",
+    "dev:ssr": "ng run frontEnd:serve-ssr",
+    "prerender": "ng run frontEnd:prerender"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
+    "@angular/animations": "^12.2.0",
     "@angular/cdk": "^12.2.8",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/localize": "~12.2.0",
-    "@angular/material": "^12.2.8",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
+    "@angular/common": "^12.2.0",
+    "@angular/compiler": "^12.2.0",
+    "@angular/core": "^12.2.0",
+    "@angular/forms": "^12.2.0",
+    "@angular/localize": "^12.2.0",
+    "@angular/material": "^12.2.11",
+    "@angular/platform-browser": "^12.2.0",
+    "@angular/platform-browser-dynamic": "^12.2.0",
+    "@angular/platform-server": "^12.2.0",
+    "@angular/router": "^12.2.0",
+    "@nguniversal/express-engine": "^12.1.2",
     "bootstrap": "^5.1.1",
+    "express": "^4.15.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.7",
-    "@angular/cli": "~12.2.7",
+    "@angular/cli": "^12.2.11",
     "@angular/compiler-cli": "~12.2.0",
+    "@nguniversal/builders": "^12.1.2",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
