--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: CI Angular app through Github Actions
 on: 
 push:
-branches: [main]
+branches: [master]
 pull_request:
-branches: [main]
+branches: [master]
 
 jobs:
   build:
