--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/platform-server": "^12.2.0",
     "@angular/router": "^12.2.0",
     "@angular/service-worker": "^12.2.0",
+    "@ngrx/effects": "^12.5.1",
     "@ngrx/store": "^12.5.1",
     "@nguniversal/express-engine": "^12.1.2",
     "bootstrap": "^5.1.1",
