--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@ngrx/effects": "^12.5.1",
     "@ngrx/store": "^12.5.1",
     "@nguniversal/express-engine": "^12.1.2",
+    "algoliasearch": "^4.11.0",
+    "angular-instantsearch": "^4.0.1",
     "bootstrap": "^5.1.1",
     "express": "^4.15.2",
     "material-design-icons": "^3.0.1",
