--- a/firebase.json
+++ b/firebase.json
@@ -1,9 +1,6 @@
 {
-  "functions": {
-    "source": "functions"
-  },
   "hosting": {
-    "public": "dist/frontEnd",
+    "public": "dist",
     "ignore": [
       "firebase.json",
       "**/.*",
